# Spark2

./: CMakeLists.txt  README.MD
doc/: doxyfile.in
include/Spark/: Application.hpp
include/Spark/Renderer/: Renderer.hpp
include/Spark/Window/: Window.hpp
src/Spark/: Application.cpp  CMakeLists.txt  Main.cpp
src/Spark/Renderer/: CMakeLists.txt  Renderer.cpp  RendererImpl.cpp  RendererImpl.hpp
src/Spark/Renderer/Vulkan/: RendererImplVulkan.cpp  RendererImplVulkan.hpp
src/Spark/Renderer/Vulkan/Win32/: VulkanImplWin32.cpp  VulkanImplWin32.hpp
src/Spark/Window/: CMakeLists.txt  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
src/Spark/Window/Win32/: WindowImplWin32.cpp  WindowImplWin32.hpp
